Added user icon

--- a/config.toml
+++ b/config.toml
@@ -15,7 +15,7 @@ author = "Vedita Kamat"
 description = "Vedita's personal website"
 keywords = "blog,developer,personal"
 info = ["Software Developer", "Magician"]
-avatarURL = "images/avatar.png"
+avatarURL = "images/user.png"
 #gravatar = "john.doe@example.com"
 dateFormat = "January 1, 2006"
 since = 2023
